Criação da função para listar os títulos do flamengo
